[package]
name = "caffy_os"
version = "0.0.1"
authors = ["Valdemar H. Lorenzen <valdemar.lorenzen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.0"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

# The profile used for `cargo build`.
[profile.dev]
panic = "abort" # Disable stack unwinding on panic.

# The profile used for `cargo build --release`.
[profile.release]
panic = "abort" # Disable stack unwinding on panic.

