[package]
name = "caffy_os"
version = "0.0.1"
authors = ["Valdemar H. Lorenzen <valdemar.lorenzen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.9.6"
uart_16550 = "0.2.4"
pic8259_simple = "0.1.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.8.1"

[dependencies.bootloader]
version = "0.9.0"
features = ["map_physical_memory"]

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

# The profile used for `cargo build`.
[profile.dev]
panic = "abort" # Disable stack unwinding on panic.

# The profile used for `cargo build --release`.
[profile.release]
panic = "abort" # Disable stack unwinding on panic.

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[package.metadata.bootimage]
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial", "stdio",
	"-display", "none"
]
test-success-exit-code = 33	 # (0x10 << 1) | 1
test-timeout = 300  # (in seconds)

